# django-inet

./: .landscape.yml  .travis.yml  CHANGELOG.md  CHANGELOG.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql.yml  tests.yml
Ctl/: config.yml
LOCAL/: setup.py
django_inet/: models.py  rest.py
facsimile/: requirements-test.txt  requirements.txt
src/django_inet/: models.py  rest.py
tests/: conftest.py  models.py  test_models.py  test_rest.py
