[tool.poetry]
name = "django-inet"
version = "1.0.1.1"
description = "django internet utilities"
readme = "README.md"
repository = "https://github.com/20c/django-inet"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
    { include = "django_inet", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
# testing
pytest = "^6.0.1"
pytest-django = "^3.8.0"
pytest-cov = "*"
djangorestframework = "^3"

# linting
black = ">=20"
isort = "^5.7.0"
flake8 = "^3.8.4"
mypy = "^0.812"
pre-commit = "^2.13"
pyupgrade = "^2.19.4"

# docs
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = "^1.2.3"

# ctl
ctl = "^1"
jinja2 = "^2.11.2"
tmpl = "^1"
twine = "^3.3.0"

[tool.poetry.plugins."markdown.extensions"]
pymdgen = "pymdgen.md:Extension"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
